--- a/portfolio.css
+++ b/portfolio.css
@@ -15,3 +15,15 @@ body{
 .personal-family{
     font-family: 'Roboto Mono', monospace;
 }
+#content{
+    height: 100vh;
+    justify-items: center;
+}
+#content{
+    margin-top: 20% !important;
+}
+@media (max-width: 575.98px){
+    #content{
+        margin-top: -3rem !important;
+    }
+}
