--- a/portfolio.css
+++ b/portfolio.css
@@ -27,3 +27,6 @@ body{
         margin-top: -3rem !important;
     }
 }
+.bg-rodape{
+    background: linear-gradient(to right, #2f3640,#192a56);
+}
