--- a/portfolio.css
+++ b/portfolio.css
@@ -7,8 +7,18 @@ body{
 .bg-rennan{
     background: linear-gradient(to right, #4a69bd,#0c2461);
     height: 100vh;
+    color: #fff;
 }
-
+.bg-light{
+   background: linear-gradient(to right, #95a5a6,#ecf0f1);
+    height: 100vh;
+    color: #000;
+}
+.bg-dark{
+   background: linear-gradient(to right, #57606f,#2f3542);
+    height: 100vh;
+    color: #fff;
+}
 .mt-n4{
     margin-top: -1rem;
 }
@@ -20,7 +30,7 @@ body{
     justify-items: center;
 }
 #content{
-    margin-top: 10% !important;
+    margin-top: 5% !important;
 }
 @media (max-width: 575.98px){
     #content{
