--- a/portfolio.css
+++ b/portfolio.css
@@ -10,7 +10,7 @@ body{
     color: #fff;
 }
 .bg-light{
-   background: linear-gradient(to right, #95a5a6,#ecf0f1);
+   background: linear-gradient(to right, #dfe6e9,#636e72);
     height: 100vh;
     color: #000;
 }
@@ -36,4 +36,7 @@ body{
     #content{
         margin-top: -3rem !important;
     }
+}
+#alinhamento{
+    margin-bottom: 100% !important;
 }
